<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.camilagiraldo.my_calculator.MainActivityCalculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/ver"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textSize="30sp"
            />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/Siete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/siete"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"
            />
        <Button
            android:id="@+id/Ocho"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/ocho"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Nueve"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/nueve"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Suma"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/suma"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/Cuatro"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/cuatro"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"
            />
        <Button
            android:id="@+id/Cinco"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/cinco"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Seis"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/seis"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Resta"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/resta"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/Uno"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/uno"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"
            />
        <Button
            android:id="@+id/Dos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/dos"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Tres"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/tres"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Mul"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/mul"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/Deci"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/deci"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"
            />
        <Button
            android:id="@+id/Cero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/cero"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Igual"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/igual"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
        <Button
            android:id="@+id/Div"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/div"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="opera"/>
    </LinearLayout>

</LinearLayout>
